--- a/gui/paneladministrativo.ui
+++ b/gui/paneladministrativo.ui
@@ -32,7 +32,7 @@
     <string notr="true"/>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -438,16 +438,6 @@
       <string>Instrumento:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEditTipoObservacion">
-     <property name="geometry">
-      <rect>
-       <x>420</x>
-       <y>20</y>
-       <width>191</width>
-       <height>27</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QLineEdit" name="lineEditDuracion">
      <property name="geometry">
       <rect>
@@ -475,6 +465,16 @@
        <y>120</y>
        <width>191</width>
        <height>121</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBoxTipo">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>20</y>
+       <width>191</width>
+       <height>27</height>
       </rect>
      </property>
     </widget>
