Ya se cargarn las pruebas en la interfaz de estudiantes. Ya se cargan las opciones para estudiantes y admin por separado. Se integro la prueba cargada con las opciones del observe.
**Ventana Adquisicion de datos
*arreglar mensajes y tiempo del log
*Cambiar animacion del boton observar

**Ventana Modia
*cuentas fondo del cielo.
*Reiniciar la imagen al completar la observacion, Mejorar.
*Explota si se inicia modia antes de la observacion.

**Interfaz Principal (Clase Simulador)
*Mejorar la interfaz principal.
*Conectar Botones para cada tipo de prueba (Cambiar la leyenda).
*Crear y conectar la base de datos.
*Completar ventana del panel administrativo

**Terminal
*Agregar comando faltantes
*Arreglar conxion con qnxs (verificar)

+Verificar el numero de linea con la imagen que va en curso
(ProcesoFits)
+Verificar salto de una imagen a otra.
+Programa explota al cerrar Modia (Desabilitar boton modia al iniciar
modia).

--- a/gui/paneladministrativo.ui
+++ b/gui/paneladministrativo.ui
@@ -518,7 +518,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Acepptar</string>
+    <string>Aceptar</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonLimpiar">
