--- a/resource.qrc
+++ b/resource.qrc
@@ -93,5 +93,6 @@
         <file>images/sesion.jpg</file>
         <file>images/pantallaLogin.png</file>
         <file>images/pantalla.jpg</file>
+        <file>images/schmidt03.jpg</file>
     </qresource>
 </RCC>
