--- a/gui/adquisiciondatos.ui
+++ b/gui/adquisiciondatos.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1024</width>
+    <width>960</width>
     <height>620</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1024</width>
+    <width>960</width>
     <height>620</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1024</width>
+    <width>960</width>
     <height>620</height>
    </size>
   </property>
@@ -31,8 +31,8 @@
      <rect>
       <x>90</x>
       <y>10</y>
-      <width>341</width>
-      <height>23</height>
+      <width>301</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
@@ -233,7 +233,7 @@
    <widget class="QPushButton" name="observarPushButton">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>30</x>
       <y>220</y>
       <width>121</width>
       <height>27</height>
@@ -251,7 +251,7 @@
    <widget class="QPushButton" name="salirPushButton">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>150</x>
       <y>220</y>
       <width>131</width>
       <height>27</height>
@@ -269,7 +269,7 @@
    <widget class="QPushButton" name="emcabezadosPushButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>280</x>
       <y>220</y>
       <width>121</width>
       <height>27</height>
@@ -287,17 +287,18 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>140</x>
       <y>260</y>
-      <width>241</width>
-      <height>27</height>
+      <width>221</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>18</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
@@ -309,8 +310,8 @@
      <rect>
       <x>10</x>
       <y>290</y>
-      <width>521</width>
-      <height>95</height>
+      <width>501</width>
+      <height>91</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -369,8 +370,8 @@
      <rect>
       <x>10</x>
       <y>380</y>
-      <width>521</width>
-      <height>70</height>
+      <width>501</width>
+      <height>51</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -506,7 +507,7 @@
    <widget class="QLineEdit" name="posYLineEdit">
     <property name="geometry">
      <rect>
-      <x>315</x>
+      <x>310</x>
       <y>450</y>
       <width>55</width>
       <height>23</height>
@@ -516,7 +517,7 @@
    <widget class="QLineEdit" name="posZLineEdit">
     <property name="geometry">
      <rect>
-      <x>395</x>
+      <x>380</x>
       <y>450</y>
       <width>55</width>
       <height>23</height>
@@ -526,7 +527,7 @@
    <widget class="QLineEdit" name="posTLineEdit">
     <property name="geometry">
      <rect>
-      <x>475</x>
+      <x>450</x>
       <y>450</y>
       <width>55</width>
       <height>23</height>
@@ -538,8 +539,8 @@
      <rect>
       <x>10</x>
       <y>490</y>
-      <width>531</width>
-      <height>80</height>
+      <width>511</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="title">
@@ -637,13 +638,13 @@
      <rect>
       <x>60</x>
       <y>50</y>
-      <width>431</width>
-      <height>27</height>
+      <width>371</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>24</pointsize>
+      <pointsize>20</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -657,7 +658,7 @@
      <rect>
       <x>230</x>
       <y>100</y>
-      <width>291</width>
+      <width>261</width>
       <height>27</height>
      </rect>
     </property>
@@ -684,9 +685,9 @@
    <widget class="QTextEdit" name="LogTextEdit">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>540</x>
       <y>10</y>
-      <width>431</width>
+      <width>401</width>
       <height>421</height>
      </rect>
     </property>
@@ -694,17 +695,18 @@
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>650</x>
       <y>440</y>
-      <width>241</width>
+      <width>221</width>
       <height>27</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>18</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
@@ -714,9 +716,9 @@
    <widget class="QWidget" name="formLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>540</x>
       <y>470</y>
-      <width>431</width>
+      <width>401</width>
       <height>95</height>
      </rect>
     </property>
@@ -756,7 +758,7 @@
    <widget class="QPushButton" name="modiaPushButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>400</x>
       <y>220</y>
       <width>121</width>
       <height>27</height>
@@ -777,7 +779,7 @@
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -785,7 +787,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1024</width>
+     <width>960</width>
      <height>25</height>
     </rect>
    </property>
