Agregado Label del obturador y conectado con los comandos de la consola. Creado script de obturador1
**Ventana Adquisicion de datos
*arreglar mensajes y tiempo del log
*Cambiar animacion del boton observar

**Ventana Modia
*cuentas fondo del cielo.
*Reiniciar la imagen al completar la observacion, Mejorar.
*Explota si se inicia modia antes de la observacion.

**Interfaz Principal (Clase Simulador)
*Mejorar la interfaz principal.
*Conectar Botones para cada tipo de prueba (Cambiar la leyenda).
*Crear y conectar la base de datos.
*Completar ventana del panel administrativo

**Terminal
*Agregar comando faltantes (obtupas, movd2)

+Verificar el numero de linea con la imagen que va en curso
(ProcesoFits)
+Verificar salto de una imagen a otra.
+Programa explota al cerrar Modia (Desabilitar boton modia al iniciar
modia).

--- a/resource.qrc
+++ b/resource.qrc
@@ -99,5 +99,7 @@
         <file>images/iconAcerca.jpg</file>
         <file>images/asistente.png</file>
         <file>images/ico_soporte.png</file>
+        <file>images/obt_abierto.jpg</file>
+        <file>images/obt_cerrado.gif</file>
     </qresource>
 </RCC>
