--- a/gui/formpruebadata.ui
+++ b/gui/formpruebadata.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>220</width>
-    <height>610</height>
+    <width>213</width>
+    <height>691</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -355,6 +355,32 @@
    </property>
    <property name="text">
     <string>Protocolo</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>610</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Obturador</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelObturador">
+   <property name="geometry">
+    <rect>
+     <x>75</x>
+     <y>630</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
