Agregados programas de control schmidt (ya sirven summary y limpiar), quitar mensajes cuando se copian las imagenes

--- a/resource.qrc
+++ b/resource.qrc
@@ -101,5 +101,6 @@
         <file>images/ico_soporte.png</file>
         <file>images/obt_abierto.jpg</file>
         <file>images/obt_cerrado.gif</file>
+        <file>images/folder_yellow.ico</file>
     </qresource>
 </RCC>
