--- a/gui/usuarios/registrousuario.ui
+++ b/gui/usuarios/registrousuario.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>610</width>
-    <height>358</height>
+    <width>575</width>
+    <height>361</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,9 +39,9 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>30</y>
+     <y>10</y>
      <width>341</width>
-     <height>227</height>
+     <height>271</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
@@ -86,7 +86,11 @@
      </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QLineEdit" name="contrasenaLineEdit"/>
+     <widget class="QLineEdit" name="contrasenaLineEdit">
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
+     </widget>
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="repitaContrasenaLabel">
@@ -98,25 +102,39 @@
     <item row="4" column="1">
      <widget class="QLineEdit" name="repitaContrasenaLineEdit"/>
     </item>
-    <item row="5" column="0">
+    <item row="6" column="0">
      <widget class="QLabel" name="tipoDeUsuarioLabel">
       <property name="text">
        <string>Tipo de Usuario</string>
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
+    <item row="6" column="1">
      <widget class="QComboBox" name="tipoDeUsuarioComboBox"/>
     </item>
-    <item row="6" column="0">
+    <item row="7" column="0">
      <widget class="QLabel" name="codigoDeAdministradorLabel">
       <property name="text">
        <string>Codigo de Administrador</string>
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
+    <item row="7" column="1">
      <widget class="QLineEdit" name="codigoDeAdministradorLineEdit"/>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="fraseSecretaLabel">
+      <property name="text">
+       <string>Frase Secreta</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QLineEdit" name="fraseSecretaLineEdit">
+      <property name="toolTip">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Se usa para recuperar su contraseña&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -124,7 +142,7 @@
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>280</y>
+     <y>290</y>
      <width>191</width>
      <height>51</height>
     </rect>
